# SDL-engine

./: .gitignore  Makefile  README.md
cmake/: CMakeLists.txt
src/: Game.cpp  Game.h  hello.cpp  init.cpp  init.h
